# utils

./: CMakeLists.txt
src/: StackedBumpAllocator.hpp  any_callable.hpp  any_callable_ref.hpp  any_list.hpp  callable_ref.hpp  callable_utils.hpp  fixed_buffer.hpp  sbo_base.hpp  trailling_objects.hpp
test/: AllocatorTest.cpp  any_callable_ref_test.cpp  any_callable_test.cpp  any_list.cpp  callable_ref_test.cpp
